--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.8",
+    "@types/react": "^18.0.24",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "typescript": "^4.8.4"
   }
 }
