--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.42.1",
     "axios": "^1.1.3",
     "faunadb": "^4.7.1",
@@ -21,10 +26,12 @@
     "stripe": "^10.15.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.3",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "slice-machine-ui": "^0.5.2",
     "typescript": "^4.8.4"
   }
 }
